extends Control
class_name MainHomeController2D

# ============================================================================
# ê°„ë‹¨í•œ 2D ë©”ì¸ í™ˆ í™”ë©´ - ë³µì¡í•œ 3D ì—†ì´ ì‹¤ìš©ì ìœ¼ë¡œ
# ============================================================================

# UI ì°¸ì¡° - ê°„ë‹¨í•œ êµ¬ì¡°
@onready var player_name: Label = $HeaderBar/HeaderContent/PlayerSection/PlayerInfo/PlayerName
@onready var player_level: Label = $HeaderBar/HeaderContent/PlayerSection/PlayerInfo/PlayerLevel
@onready var gold_amount: Label = $HeaderBar/HeaderContent/CurrencySection/GoldPanel/GoldAmount
@onready var gem_amount: Label = $HeaderBar/HeaderContent/CurrencySection/GemPanel/GemAmount

@onready var character_display: Control = $CharacterDisplay
@onready var character_sprite: TextureRect = $CharacterDisplay/CharacterSprite
@onready var character_placeholder: Label = $CharacterDisplay/CharacterSprite/CharacterPlaceholder
@onready var interaction_area: Control = $CharacterDisplay/InteractionArea
@onready var speech_bubble: PanelContainer = $CharacterDisplay/SpeechBubble
@onready var speech_text: Label = $CharacterDisplay/SpeechBubble/SpeechText

@onready var career_button: Button = $GameModeButtons/CareerButton
@onready var team_button: Button = $GameModeButtons/TeamButton
@onready var shop_button: Button = $GameModeButtons/ShopButton
@onready var quest_button: Button = $GameModeButtons/QuestButton
@onready var multiplayer_button: Button = $GameModeButtons/MultiplayerButton

@onready var myteam_info: Label = $GameInfoCards/MyTeamCard/HBox/VBox/Info
@onready var notice_info: Label = $GameInfoCards/NoticeCard/HBox/VBox/Info
@onready var achievement_info: Label = $GameInfoCards/AchievementCard/HBox/VBox/Info

# Scene ê²½ë¡œë“¤
const CAREER_SCENE = "res://scenes/CareerIntroScreen.tscn"
const TEAM_SCENE = "res://scenes/MyTeamScreen.tscn"
const SHOP_SCENE = "res://scenes/ShopScreenImproved.tscn"
const QUEST_SCENE = "res://scenes/ui/QuestLogScreen.tscn"

# ============================================================================
# ì´ˆê¸°í™”
# ============================================================================


func _ready():
	print("\n[MainHomeController2D] âœ… NEW 2D VERSION LOADING!")

	_apply_theme_styles()
	_setup_buttons()
	_update_player_info()
	_update_character()
	_update_game_info()
	_setup_interaction()


func _apply_theme_styles():
	"""ThemeManager ìŠ¤íƒ€ì¼ ì¼ê´„ ì ìš©"""
	# ë°°ê²½ìƒ‰ ì ìš©
	var bg = $Background
	if bg:
		bg.color = ThemeManager.BG_PRIMARY

	# í—¤ë”ë°” ìŠ¤íƒ€ì¼
	var header = $HeaderBar
	if header:
		var header_style = ThemeManager.create_header_style()
		header.add_theme_stylebox_override("panel", header_style)

	# í—¤ë” í…ìŠ¤íŠ¸ ìƒ‰ìƒ
	if player_name:
		player_name.add_theme_color_override("font_color", ThemeManager.TEXT_PRIMARY)
		player_name.add_theme_font_size_override("font_size", ThemeManager.FONT_H3)
	if player_level:
		player_level.add_theme_color_override("font_color", ThemeManager.ACCENT)
		player_level.add_theme_font_size_override("font_size", ThemeManager.FONT_CAPTION)

	# ê²Œì„ ëª¨ë“œ ë²„íŠ¼ë“¤ì— ThemeManager ìŠ¤íƒ€ì¼ ì ìš©
	_apply_game_mode_button_styles()

	# Info ì¹´ë“œë“¤ ìŠ¤íƒ€ì¼ ì ìš©
	_apply_info_card_styles()


func _apply_game_mode_button_styles():
	"""ê²Œì„ ëª¨ë“œ ë²„íŠ¼ ìŠ¤íƒ€ì¼ ì ìš©"""
	var mode_buttons = [career_button, team_button, shop_button, quest_button]
	for button in mode_buttons:
		if button:
			var style = ThemeManager.get_button_style("secondary")
			ThemeManager.apply_button_style(button, style)

			# ë²„íŠ¼ ë‚´ë¶€ ë¼ë²¨ ìƒ‰ìƒ ì¡°ì •
			var title = button.get_node_or_null("HBox/VBox/Title")
			var desc = button.get_node_or_null("HBox/VBox/Desc")
			if title:
				title.add_theme_color_override("font_color", ThemeManager.ACCENT)
				title.add_theme_font_size_override("font_size", ThemeManager.FONT_H3)
			if desc:
				desc.add_theme_color_override("font_color", ThemeManager.TEXT_SECONDARY)
				desc.add_theme_font_size_override("font_size", ThemeManager.FONT_MICRO)

	# ë©€í‹°í”Œë ˆì´ì–´ ë²„íŠ¼ì€ ë¹„í™œì„± ìŠ¤íƒ€ì¼
	if multiplayer_button:
		var disabled_style = ThemeManager.create_button_stylebox(ThemeManager.BG_TERTIARY)
		multiplayer_button.add_theme_stylebox_override("normal", disabled_style)
		multiplayer_button.add_theme_stylebox_override("disabled", disabled_style)


func _apply_info_card_styles():
	"""Info ì¹´ë“œ ìŠ¤íƒ€ì¼ ì ìš©"""
	var cards = $GameInfoCards
	if not cards:
		return

	for card in cards.get_children():
		if card is PanelContainer:
			var style = ThemeManager.create_card_style()
			card.add_theme_stylebox_override("panel", style)

			# ì¹´ë“œ ë‚´ë¶€ ë¼ë²¨ ìŠ¤íƒ€ì¼
			var title = card.get_node_or_null("HBox/VBox/Title")
			var info = card.get_node_or_null("HBox/VBox/Info")
			if title:
				title.add_theme_color_override("font_color", ThemeManager.ACCENT)
				title.add_theme_font_size_override("font_size", ThemeManager.FONT_CAPTION)
			if info:
				info.add_theme_color_override("font_color", ThemeManager.TEXT_SECONDARY)
				info.add_theme_font_size_override("font_size", ThemeManager.FONT_MICRO)

	# ë§í’ì„  ìŠ¤íƒ€ì¼
	if speech_bubble:
		var bubble_style = ThemeManager.create_card_style()
		bubble_style.bg_color = ThemeManager.BG_SECONDARY
		speech_bubble.add_theme_stylebox_override("panel", bubble_style)
	if speech_text:
		speech_text.add_theme_color_override("font_color", ThemeManager.TEXT_PRIMARY)
		speech_text.add_theme_font_size_override("font_size", ThemeManager.FONT_BODY)

	# ì¬í™” ì„¹ì…˜ ìŠ¤íƒ€ì¼
	if gold_amount:
		gold_amount.add_theme_color_override("font_color", ThemeManager.TEXT_HIGHLIGHT)
		gold_amount.add_theme_font_size_override("font_size", ThemeManager.FONT_BODY)
	if gem_amount:
		gem_amount.add_theme_color_override("font_color", ThemeManager.ACCENT)
		gem_amount.add_theme_font_size_override("font_size", ThemeManager.FONT_BODY)

	# ìºë¦­í„° í”Œë ˆì´ìŠ¤í™€ë”
	if character_placeholder:
		character_placeholder.add_theme_color_override("font_color", ThemeManager.TEXT_PRIMARY)


func _setup_buttons():
	"""ë²„íŠ¼ ì—°ê²°"""
	career_button.pressed.connect(_on_career_pressed)
	team_button.pressed.connect(_on_team_pressed)
	shop_button.pressed.connect(_on_shop_pressed)
	quest_button.pressed.connect(_on_quest_pressed)
	multiplayer_button.pressed.connect(_on_multiplayer_pressed)

	# ë²„íŠ¼ í˜¸ë²„ íš¨ê³¼
	for button in [career_button, team_button, shop_button, quest_button]:
		button.mouse_entered.connect(func(): _on_button_hover(button, true))
		button.mouse_exited.connect(func(): _on_button_hover(button, false))


func _setup_interaction():
	"""ìºë¦­í„° ìƒí˜¸ì‘ìš©"""
	interaction_area.gui_input.connect(_on_character_touched)


# ============================================================================
# UI ì—…ë°ì´íŠ¸
# ============================================================================


func _update_player_info():
	"""í”Œë ˆì´ì–´ ì •ë³´ ì—…ë°ì´íŠ¸"""
	if PlayerData:
		player_name.text = PlayerData.player_name
		if PlayerData.has_method("get_overall_rating"):
			var overall = PlayerData.get_overall_rating()
			player_level.text = "Lv.%d" % overall
	else:
		player_name.text = "í”Œë ˆì´ì–´"
		player_level.text = "Lv.80"

	# ì¬í™” (ì„ì‹œ ê°’)
	gold_amount.text = "2,500"
	gem_amount.text = "150"


func _update_character():
	"""2D ìºë¦­í„° í‘œì‹œ"""
	# ë‚˜ì¤‘ì— ì‹¤ì œ ìŠ¤í”„ë¼ì´íŠ¸ë¡œ êµì²´
	# character_sprite.texture = load("res://sprites/player.png")

	# í˜„ì¬ëŠ” ì´ëª¨ì§€ í”Œë ˆì´ìŠ¤í™€ë”
	character_placeholder.text = "âš½\nì„ ìˆ˜"

	# ê°„ë‹¨í•œ idle ì• ë‹ˆë©”ì´ì…˜
	var tween = get_tree().create_tween()
	tween.set_loops(1)
	tween.tween_property(character_placeholder, "scale", Vector2(1.05, 1.05), 2.0)
	tween.tween_property(character_placeholder, "scale", Vector2(1.0, 1.0), 2.0)


func _update_game_info():
	"""ê²Œì„ ì „ì²´ ì •ë³´ ì¹´ë“œ ì—…ë°ì´íŠ¸"""
	# MyTeam ì •ë³´ - ìœ¡ì„±ì™„ë£Œëœ ì„ ìˆ˜ ìˆ˜
	if MyTeamData and "saved_players" in MyTeamData:
		var count = MyTeamData.saved_players.size()
		if count > 0:
			myteam_info.text = "%dëª… ë³´ìœ " % count
		else:
			myteam_info.text = "ì„ ìˆ˜ ì—†ìŒ"
	else:
		myteam_info.text = "0ëª… ë³´ìœ "

	# ê³µì§€ì‚¬í•­ - í™˜ì˜ ë©”ì‹œì§€ë‚˜ ê²Œì„ íŒ
	var notices = ["í™˜ì˜í•©ë‹ˆë‹¤!", "ìœ¡ì„±ë¶€í„° ì‹œì‘í•˜ì„¸ìš”", "ì½”ì¹˜ ì¹´ë“œë¥¼ ëª¨ì•„ë³´ì„¸ìš”", "íŒ€ì„ êµ¬ì„±í•´ë³´ì„¸ìš”"]
	notice_info.text = notices[randi() % notices.size()]

	# ì—…ì  - í”Œë ˆì´ì–´ ì§„í–‰ë„
	if PlayerData:
		if PlayerData.has_method("get_overall_rating"):
			var overall = PlayerData.get_overall_rating()
			if overall >= 80:
				achievement_info.text = "ì—˜ë¦¬íŠ¸ ì„ ìˆ˜!"
			elif overall >= 60:
				achievement_info.text = "ì‹¤ë ¥ì!"
			else:
				achievement_info.text = "ì„±ì¥ ì¤‘!"
		else:
			achievement_info.text = "ìƒˆë¡œ ì‹œì‘!"
	else:
		achievement_info.text = "ìƒˆë¡œ ì‹œì‘!"


# ============================================================================
# ìºë¦­í„° ìƒí˜¸ì‘ìš©
# ============================================================================


func _on_character_touched(event: InputEvent):
	"""ìºë¦­í„° í„°ì¹˜ ë°˜ì‘"""
	if event is InputEventMouseButton and event.pressed:
		_play_character_reaction()


func _play_character_reaction():
	"""ìºë¦­í„° ë°˜ì‘"""
	# ë°”ìš´ìŠ¤ ì• ë‹ˆë©”ì´ì…˜
	var tween = get_tree().create_tween()
	tween.tween_property(character_display, "scale", Vector2(1.1, 1.1), 0.1)
	tween.tween_property(character_display, "scale", Vector2(1.0, 1.0), 0.1)

	# ë§í’ì„  í‘œì‹œ
	var messages = ["ì—´ì‹¬íˆ í›ˆë ¨í• ê²Œìš”!", "í™”ì´íŒ…! âš½", "ì˜¤ëŠ˜ë„ ì¢‹ì€ í•˜ë£¨!", "ê°ë…ë‹˜ ë¯¿ê³  ìˆì–´ìš”!", "ìµœê³ ê°€ ë˜ê³  ì‹¶ì–´ìš”!"]

	speech_text.text = messages[randi() % messages.size()]
	speech_bubble.visible = true

	# 2ì´ˆ í›„ ì‚¬ë¼ì§
	await get_tree().create_timer(2.0).timeout
	speech_bubble.visible = false


# ============================================================================
# ë²„íŠ¼ ì´ë²¤íŠ¸
# ============================================================================


func _on_career_pressed():
	"""ìœ¡ì„± ëª¨ë“œ"""
	print("[MainHome2D] ìœ¡ì„± ëª¨ë“œ ì‹œì‘")
	get_tree().change_scene_to_file(CAREER_SCENE)


func _on_team_pressed():
	"""íŒ€ ê´€ë¦¬"""
	print("[MainHome2D] íŒ€ ê´€ë¦¬ ì‹œì‘")
	get_tree().change_scene_to_file(TEAM_SCENE)


func _on_shop_pressed():
	"""ìƒì """
	print("[MainHome2D] ìƒì  ì—´ê¸°")
	get_tree().change_scene_to_file(SHOP_SCENE)


func _on_quest_pressed():
	"""í€˜ìŠ¤íŠ¸"""
	print("[MainHome2D] í€˜ìŠ¤íŠ¸ í™”ë©´ìœ¼ë¡œ ì´ë™")
	get_tree().change_scene_to_file(QUEST_SCENE)


func _on_multiplayer_pressed():
	"""ë©€í‹°í”Œë ˆì´ì–´ (Coming Soon)"""
	var dialog = AcceptDialog.new()
	dialog.title = "ë©€í‹°í”Œë ˆì´ì–´"
	dialog.dialog_text = "ğŸŒ Coming Soon!\n\nì˜¨ë¼ì¸ ëŒ€ì „ ëª¨ë“œëŠ”\nê³§ ì—…ë°ì´íŠ¸ ì˜ˆì •ì…ë‹ˆë‹¤!"
	dialog.min_size = Vector2(300, 150)
	add_child(dialog)
	dialog.popup_centered()
	dialog.confirmed.connect(dialog.queue_free)


func _on_button_hover(button: Button, hovering: bool):
	"""ë²„íŠ¼ í˜¸ë²„ íš¨ê³¼"""
	var tween = get_tree().create_tween()
	if hovering:
		tween.tween_property(button, "scale", Vector2(1.05, 1.05), 0.1)
	else:
		tween.tween_property(button, "scale", Vector2(1.0, 1.0), 0.1)


# ============================================================================
# ESC í‚¤ë¡œ íƒ€ì´í‹€ë¡œ
# ============================================================================


func _input(event):
	if event.is_action_pressed("ui_cancel"):
		get_tree().change_scene_to_file("res://scenes/TitleScreenImproved.tscn")
